# project-forge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: backup-db.sh  generate-once.sh  generate-super-ideas.sh  project-forge-web.service  serve.sh  setup.sh
src/project_forge/: models.py
src/project_forge/cron/: auto_scan.py  horizontal.py  introspect_runner.py  runner.py  scheduler.py
src/project_forge/engine/: bulk.py  categories.py  compare.py  dedup.py  generator.py  introspect.py  prompts.py  scorer.py  super_ideas.py  url_ingest.py
src/project_forge/scaffold/: builder.py  github.py
src/project_forge/storage/: db.py
src/project_forge/web/: app.py  auth.py  routes.py
src/project_forge/web/static/: app.js  (+1 more)
tests/: test_auth.py  test_auto_scan.py  test_bug_fixes.py  test_bulk_generate.py  test_bulk_pqc_generation.py  test_categories.py  test_compare.py  test_cron_runner.py  test_csp_security.py  test_dashboard_rendering.py  test_dashboard_tabs.py  test_dedup_system.py  test_generator.py  test_governance_banner.py  test_horizontal.py  test_introspect.py  test_introspect_runner.py  test_p1_blockers.py  test_pmm_routes.py  test_prompts.py  test_scaffold_builder.py  test_scaffold_github.py  test_scorer.py  test_selection_rounds.py  test_self_improve_dedup.py  test_stat_cards.py  test_storage.py  test_super_idea_status.py  test_super_ideas.py  test_super_ideas_dashboard_bug.py  test_team_review_fixes.py  test_team_review_phase2.py  test_thinktank.py  test_universal_dedup.py  test_url_ingest.py  test_web_routes.py  test_xss_prevention.py
(+10 files in other folders)
