[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-forge"
version = "0.1.0"
description = "Autonomous IT project think-tank engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Ray Ketcham", email = "rayketcham@ogjos.com"}]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.17.0",
    "anthropic>=0.80.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
]
dev = [
    "ruff>=0.15.0",
    "pip-audit>=2.0.0",
]

[project.scripts]
forge-generate = "project_forge.cron.runner:main"
forge-serve = "project_forge.web.app:run"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101", "S311", "S603", "S607", "S701"]  # assert, random, subprocess, partial path, jinja2 autoescape

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
